<resources>
    <string name="app_name">INSPT_PROTOTIPO</string>

    <string name="bienvenida">BIENVENIDO</string>
    <string name="txtview_nombreingresar">INGRESA TU NOMBRE</string>
    <string name="button_continuar">CONTINUAR</string>
    <string name="txt_view_Nom2act">NOMBRE</string>
    <string name="button_regresar">REGRESAR</string>

    <string name="textView_selecCarrera">SELECCIONA LA CARRERA</string>

</resources>